--- a/package.json
+++ b/package.json
@@ -21,19 +21,20 @@
   },
   "dependencies": {
     "@types/json-schema": "^7.0.7",
-    "ajv": "^7.0.3",
+    "ajv": "^7.0.4",
+    "ajv-formats": "^1.5.1",
     "dotenv": "^8.2.0"
   },
   "devDependencies": {
-    "@nestjs/common": "^7.6.8",
-    "@nestjs/core": "^7.6.8",
-    "@nestjs/testing": "^7.6.8",
+    "@nestjs/common": "^7.6.9",
+    "@nestjs/core": "^7.6.9",
+    "@nestjs/testing": "^7.6.9",
     "@types/chai": "^4.2.14",
     "@types/chai-as-promised": "^7.1.3",
     "@types/faker": "^5.1.6",
     "@types/mocha": "^8.2.0",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
+    "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "@typescript-eslint/parser": "^4.14.2",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "concurrently": "^5.3.0",
@@ -54,7 +55,7 @@
     "typescript": "~4.1.3"
   },
   "peerDependencies": {
-    "@nestjs/common": "^7.6.8"
+    "@nestjs/common": "^7.6.9"
   },
   "scripts": {
     "prebuild": "yarn clean",
