--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@types/json-schema": "^7.0.7",
+    "@types/node": "*",
     "ajv": "^8.2.0",
     "ajv-formats": "^2.1.0",
     "dotenv": "^9.0.0"
