--- a/package.json
+++ b/package.json
@@ -22,41 +22,41 @@
   "dependencies": {
     "@types/json-schema": "^7.0.7",
     "@types/node": "*",
-    "ajv": "^8.2.0",
+    "ajv": "^8.6.0",
     "ajv-formats": "^2.1.0",
-    "dotenv": "^9.0.0"
+    "dotenv": "^10.0.0"
   },
   "devDependencies": {
-    "@nestjs/common": "^7.6.15",
-    "@nestjs/core": "^7.6.15",
-    "@nestjs/testing": "^7.6.15",
-    "@types/chai": "^4.2.17",
-    "@types/chai-as-promised": "^7.1.3",
-    "@types/faker": "^5.5.3",
+    "@nestjs/common": "^7.6.17",
+    "@nestjs/core": "^7.6.17",
+    "@nestjs/testing": "^7.6.17",
+    "@types/chai": "^4.2.18",
+    "@types/chai-as-promised": "^7.1.4",
+    "@types/faker": "^5.5.6",
     "@types/mocha": "^8.2.2",
-    "@typescript-eslint/eslint-plugin": "^4.22.1",
-    "@typescript-eslint/parser": "^4.22.1",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
-    "concurrently": "^6.0.2",
-    "eslint": "^7.25.0",
+    "concurrently": "^6.2.0",
+    "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "faker": "^5.5.3",
-    "husky": "^4.3.8",
-    "lint-staged": "^10.5.4",
-    "mocha": "^8.3.2",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
+    "mocha": "^9.0.0",
     "nyc": "^15.1.0",
-    "prettier": "^2.2.1",
+    "prettier": "^2.3.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.6.7",
-    "semantic-release": "^17.4.2",
-    "ts-node": "^9.1.1",
+    "rxjs": "^7.1.0",
+    "semantic-release": "^17.4.3",
+    "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "~4.2.4"
+    "typescript": "~4.3.2"
   },
   "peerDependencies": {
-    "@nestjs/common": "^7.6.15"
+    "@nestjs/common": "^7.6.17"
   },
   "scripts": {
     "prebuild": "yarn clean",
@@ -71,7 +71,8 @@
     "health": "yarn && yarn clean && yarn lint && yarn build --noEmit && yarn test --reporter dot",
     "ci": "yarn && yarn lint && yarn build --noEmit && yarn test",
     "prepublishOnly": "yarn build",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "prepare": "husky install"
   },
   "publishConfig": {
     "access": "public"
