fix: update dependencies

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@types/json-schema": "^7.0.9",
     "@types/node": "*",
     "ajv": "^8.6.2",
-    "ajv-formats": "^2.1.0",
+    "ajv-formats": "^2.1.1",
     "dotenv": "^10.0.0"
   },
   "devDependencies": {
@@ -32,46 +32,46 @@
     "@nestjs/testing": "^8.0.6",
     "@types/chai": "^4.2.21",
     "@types/chai-as-promised": "^7.1.4",
-    "@types/faker": "^5.5.7",
+    "@types/faker": "^5.5.8",
     "@types/mocha": "^9.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.29.0",
-    "@typescript-eslint/parser": "^4.29.0",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
-    "concurrently": "^6.2.0",
+    "concurrently": "^6.2.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "faker": "^5.5.3",
-    "husky": "^7.0.1",
+    "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
-    "mocha": "^9.0.3",
+    "mocha": "^9.1.1",
     "nyc": "^15.1.0",
-    "prettier": "^2.3.2",
+    "prettier": "^2.4.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.3.0",
-    "semantic-release": "^17.4.4",
-    "ts-node": "^10.1.0",
-    "tsconfig-paths": "^3.10.1",
-    "typescript": "~4.3.5"
+    "semantic-release": "^17.4.7",
+    "ts-node": "^10.2.1",
+    "tsconfig-paths": "^3.11.0",
+    "typescript": "~4.4.2"
   },
   "peerDependencies": {
     "@nestjs/common": "^8.0.6"
   },
   "scripts": {
-    "prebuild": "yarn clean",
-    "build": "concurrently 'yarn:build:*'",
+    "prebuild": "npm run clean",
+    "build": "concurrently 'npm:build:*'",
     "build:commonjs": "tsc",
     "build:esm": "tsc --module es2020 --outDir esm",
     "clean": "rm -rf lib esm reports tsconfig.tsbuildinfo",
     "test": "mocha --require tests/entry.js 'tests/**/*.{test,spec}.ts'",
-    "cover": "nyc yarn test",
+    "cover": "nyc npm test",
     "lint": "eslint '{src,tests}/**/*.{js,ts}'",
-    "lint:fix": "yarn lint --fix",
-    "health": "yarn && yarn clean && yarn lint && yarn build --noEmit && yarn test --reporter dot",
-    "ci": "yarn && yarn lint && yarn build --noEmit && yarn test",
-    "prepublishOnly": "yarn build",
-    "semantic-release": "semantic-release",
+    "lint:fix": "npm run lint -- --fix",
+    "health": "npm install && npm run clean && npm run lint && npm run build:commonjs -- --noEmit && npm test -- --reporter dot",
+    "ci": "npm ci && npm run lint && npm run build --noEmit && npm test",
+    "prepublishOnly": "npm run clean && npm run build",
+    "release": "standard-version",
     "prepare": "husky install"
   },
   "publishConfig": {
