chore(ci): add `main` as release branch

--- a/package.json
+++ b/package.json
@@ -74,6 +74,11 @@
     "release": "standard-version",
     "prepare": "husky install"
   },
+  "release": {
+    "branches": [
+      "main"
+    ]
+  },
   "publishConfig": {
     "access": "public"
   }
